[gd_scene load_steps=9 format=3 uid="uid://cnjht3hvbing5"]

[ext_resource type="Script" path="res://script/pause_menu.gd" id="1_uqb5d"]
[ext_resource type="PackedScene" uid="uid://cfja4dv5cpjgb" path="res://options_menu.tscn" id="2_2xhhw"]
[ext_resource type="FontFile" uid="uid://bl1w4cipo08sj" path="res://font/LilitaOne-Regular.ttf" id="2_658pn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwmrt"]
bg_color = Color(1, 1, 0.905882, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.376471, 0.607843, 0.529412, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0.298039, 0.14902, 0.0235294, 1)
shadow_size = 2
shadow_offset = Vector2(0, 15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0dmgv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rhlh"]
bg_color = Color(1, 0.717647, 0.301961, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6x167"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6ni4"]
bg_color = Color(1, 0.717647, 0.301961, 1)

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqb5d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.466667, 0.466667, 0.466667, 0.392157)

[node name="Panel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_gwmrt")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "PAUSED"
horizontal_alignment = 1

[node name="resume_button" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(960, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.298039, 0.14902, 0.0235294, 1)
theme_override_fonts/font = ExtResource("2_658pn")
theme_override_font_sizes/font_size = 78
theme_override_styles/normal = SubResource("StyleBoxFlat_0dmgv")
theme_override_styles/hover = SubResource("StyleBoxFlat_3rhlh")
text = "Resume"

[node name="options_button" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(960, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.298039, 0.14902, 0.0235294, 1)
theme_override_fonts/font = ExtResource("2_658pn")
theme_override_font_sizes/font_size = 78
theme_override_styles/normal = SubResource("StyleBoxFlat_6x167")
theme_override_styles/hover = SubResource("StyleBoxFlat_r6ni4")
text = "Options"

[node name="main_menu_button" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(960, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.298039, 0.14902, 0.0235294, 1)
theme_override_fonts/font = ExtResource("2_658pn")
theme_override_font_sizes/font_size = 78
theme_override_styles/normal = SubResource("StyleBoxFlat_6x167")
theme_override_styles/hover = SubResource("StyleBoxFlat_r6ni4")
text = "Main Menu"

[node name="Options_Menu" parent="." instance=ExtResource("2_2xhhw")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="toggled" from="MarginContainer/Panel/VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_toggled"]
[connection signal="exit_options_menu" from="Options_Menu" to="." method="_on_options_menu_exit_options_menu"]
